==> Yinke7/STM32/Project/NFC/SoftWare/nfcV1.1/Component/drv_95hf.c <==
#include "stdbool.h"
#include "drv_95HF.h"
#include "lib_PCD.h"

static int8_t drv95HF_SPIPollingCommand( void )
{
  uint8_t Polling_Status = 0;
  
  if(EnableTimeOut)
    StartTimeOut(3000);		/* 3sec for LLCP can be improved to adjust it dynamically */
  
  if (drv95HFConfig.uSpiMode == RFTRANS_95HF_SPI_POLLING)
  {
    do
    {
      /* in case of an HID interuption during the process that can desactivate the timeout */
      /* Enable the Time out timer */
      HAL_TIM_Base_Start_IT(&TimHandleTimeout);
      
      /* Low level on NSS  */
      RFTRANS_95HF_NSS_LOW();
      HAL_Delay(2);
      
      /*  poll the 95HF transceiver until he's ready ! */
      Polling_Status  = SPI_SendReceiveByte(RFTRANS_95HF_COMMAND_POLLING);
      Polling_Status &= RFTRANS_95HF_FLAG_DATA_READY_MASK;
      
    }
    while( Polling_Status	!= RFTRANS_95HF_FLAG_DATA_READY && uTimeOut != true );
    
    /* High level on NSS  */
    RFTRANS_95HF_NSS_HIGH();
  }	
  else if (drv95HFConfig.uSpiMode == RFTRANS_95HF_SPI_INTERRUPT)
  {
    /* Wait a low level on the IRQ pin or the timeout  */
    while( (uDataReady == false) && (uTimeOut == false) )
    {	}		
  }
  
  if(EnableTimeOut)
    StopTimeOut( );
  
  if ( uTimeOut == true )
    return RFTRANS_95HF_POLLING_TIMEOUT;
  
  return RFTRANS_95HF_SUCCESS_CODE;	
}

int8_t drv95HF_GetIRQOutState(void)
{
  if (HAL_GPIO_ReadPin(IRQOUT_RFTRANS_95HF_PORT, IRQOUT_RFTRANS_95HF_PIN) != GPIO_PIN_RESET)
  {
    return 0x01;
  }
  else 
  {
    return 0x00;
  }
}
